2006-12-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterAlpha.xs: Allow undef data by default in
	Clutter::Alpha::set_func().

	* xs/ClutterTypes.xs: Wrap the pixel packing functions;
	wrap the HLS colospace conversion functions; fix the equal
	functions.

	* Clutter.pm: Fix examples in SYNOPSIS.

	* examples/behaviour.pl: Fix default value for the angle-end
	property of the Clutter::Ex::Behaviour::Rotate.

2006-12-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterMedia.xs: Add _ADD_INTERFACES function, which
	should allow the implementation in pure perl of the
	Clutter::Media interface.

2006-12-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Wrap clutter_actor_show_all()
	and clutter_actor_hide_all(); these currently clash
	with clutter_group_show_all() and clutter_group_hide_all()
	when using a Clutter::Group; will think on how to
	resolve this.

2006-12-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterTypes.xs: Wrap clutter_color_equal().

	* xs/ClutterBehaviourPath.xs: Use undef as default
	value for the knots argument in the constructor.

	* Clutter.pm: Overload the equality operator for
	the Clutter::Color object to call Clutter::Color::equal.

2006-12-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/behaviour.pl: Implement a rather dummy
	rotate behaviour; still needs work, but it's quite funny.

2006-12-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBehaviour.xs: Add support for implementing
	a Clutter::Behaviour in pure perl; update the callback
	for the Clutter::Behaviour::actors_foreach() method;
	bind Clutter::Behaviour::get_actors().

	* examples/behaviour.pl: Show how the pure perl behaviour
	works; update the path behaviour method call - don't use
	an arrayref of arrayrefs: just append knots as arrayrefs.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterTypes.xs: Remove the virtual accessors:
	we threat a ClutterKnot as an array reference, and