@@ -1,5 +1,10 @@
 2006-12-19  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* xs/ClutterTypes.xs: Wrap lighen, darken and shade
+	ClutterColor methods.
+
+2006-12-19  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* xs/ClutterAlpha.xs: Allow undef data by default in
 	Clutter::Alpha::set_func().
 
